--- a/helm/web-app/values.yaml
+++ b/helm/web-app/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: pankaj892/webapp
+  repository: slava871/webapp
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "11440208844"
