--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -86,7 +86,7 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email "pankaj28988@gmail.com"
+        git config --global user.email "loginmail2018@inbox.ru"
         git config --global user.name "pankaj892"
         git add helm/web-app/values.yaml
         git commit -m "fix: Update tag in Helm chart"
