--- a/helm/web-app/values.yaml
+++ b/helm/web-app/values.yaml
@@ -28,7 +28,7 @@ ingress:
     - host: web-app.local
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
