--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,6 +2,14 @@
 
 name: CI and Deploy to ArgoCD
 
+
+# ▼▼▼ ВАЖНО: ДОБАВЬТЕ ЭТИ PERMISSIONS ▼▼▼
+permissions:
+  contents: write  # разрешить запись в репозиторий (git push)
+  actions: write   # разрешить запуск новых workflows
+# ▲▲▲ ВАЖНО: ДОБАВЬТЕ ЭТИ PERMISSIONS ▲▲▲
+
+
 # Exclude the workflow to run on changes to the following files
 on:
   push:
@@ -74,11 +82,16 @@ jobs:
 
     needs: push
 
+    # ▼▼▼ ДОБАВЬТЕ ЭТО УСЛОВИЕ ▼▼▼
+#    if: ${{ github.event.head_commit.message != 'fix: Update tag in Helm chart' }}
+    # ▲▲▲ ДОБАВЬТЕ ЭТО УСЛОВИЕ ▲▲▲
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.TOKEN }}
+        fetch-depth: 0  # ▼▼▼ ДОБАВЬТЕ ЭТУ СТРОКУ ▼▼▼  важно для истории коммитов
 
     - name: Update tag in Helm chart
       run: |
