--- a/helm/web-app/templates/deployment.yaml
+++ b/helm/web-app/templates/deployment.yaml
@@ -2,18 +2,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-app
+  name: {{ include "web-app.fullname" . }}
   labels:
-    app: web-app
+    {{- include "web-app.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: web-app
+      {{- include "web-app.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app: web-app
+        {{- include "web-app.selectorLabels" . | nindent 8 }}
     spec:
       containers:
       - name: web-app
