--- a/helm/web-app/values.yaml
+++ b/helm/web-app/values.yaml
@@ -7,8 +7,8 @@ replicaCount: 1
 image:
   repository: slava871/webapp
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "20679527846"
+  # ТЕГ БУДЕТ ПЕРЕОПРЕДЕЛЕН В ARGOCD ИЛИ HELM
+  tag: "latest"  # значение по умолчанию
 
 imagePullSecrets: []
 nameOverride: ""
