--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,7 +10,7 @@ permissions:
 # ▲▲▲ ВАЖНО: ДОБАВЬТЕ ЭТИ PERMISSIONS ▲▲▲
 
 
-# Exclude the workflow to run on changes to the following files
+# Триггеры запуска/  Exclude the workflow to run on changes to the following files
 on:
   push:
     branches:
@@ -24,19 +24,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
+    steps:                        # Цель: Проверить, что код компилируется и тесты проходят:
+    - name: Checkout repository   # 1. Клонирование репозитория
       uses: actions/checkout@v4
 
-    - name: Set up Go 1.22
+    - name: Set up Go 1.22        # 2. Установка Go 1.22
       uses: actions/setup-go@v2
       with:
         go-version: 1.22
 
-    - name: Build binary
+    - name: Build binary          # 3. Сборка бинарника `web-app`
       run: go build -o web-app
 
-    - name: Test code
+    - name: Test code             # 4. Запуск тестов
       run: go test ./...
   
   # code-quality:
@@ -54,52 +54,52 @@ jobs:
   push:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: build                    # Зависимость от job 'build'
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository      # 1. Клонирование
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
+    - name: Set up Docker Buildx      # 2. Настройка Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub
+    - name: Login to DockerHub         # 3. Логин в DockerHub (используя secrets)
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and Push action
+    - name: Build and Push action          # 4. Сборка и push образа в DockerHub
       uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{github.run_id}}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{github.run_id}}  #Тег образа: webapp:${{github.run_id}} (уникальный ID запуска)
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
 
     needs: push
 
-    # ▼▼▼ ДОБАВЬТЕ ЭТО УСЛОВИЕ ▼▼▼
+    # ▼▼▼ ДОБАВЬТЕ ЭТО УСЛОВИЕ ▼▼▼ # Условие предотвращения бесконечного цикла:
     if: >
-      ${{ github.actor != 'github-actions[bot]' &&
+      ${{ github.actor != 'github-actions[bot]' &&    
           github.event.head_commit.message != 'fix: Update tag in Helm chart' }}
     # ▲▲▲ ДОБАВЬТЕ ЭТО УСЛОВИЕ ▲▲▲
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository              # 1. Клонирование с токеном и полной историей
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.TOKEN }}
         fetch-depth: 0  # ▼▼▼ ДОБАВЬТЕ ЭТУ СТРОКУ ▼▼▼  важно для истории коммитов
 
-    - name: Update tag in Helm chart
+    - name: Update tag in Helm chart        # 2. Обновление тега в values.yaml через sed
       run: |
         sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/web-app/values.yaml
 
-    - name: Commit and push changes
+    - name: Commit and push changes         # 3. Коммит и push изменений
       run: |
         git config --global user.email "loginmail2018@inbox.ru"
         git config --global user.name "Saul-Goodman-art"
