--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -77,7 +77,7 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{github.run_id}}  #Тег образа: webapp:${{github.run_id}} (уникальный ID запуска)
 
-  update-newtag-in-helm-chart: #вносит нужный тэг в values.yaml,для деплоя новой версии приложения в кубере?
+  update-newtag-in-helm-chart: #вносит нужный тэг в values.yaml,для деплоя новой версии приложения в кубере? И пушит тэг в гит!
     runs-on: ubuntu-latest
 
     needs: push
