--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,7 +51,7 @@ jobs:
   #     with:
   #       version: v1.56.2
   
-  push:
+  push:                             # Цель: push образа в DockerHub
     runs-on: ubuntu-latest
 
     needs: build                    # Зависимость от job 'build'
@@ -77,7 +77,7 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{github.run_id}}  #Тег образа: webapp:${{github.run_id}} (уникальный ID запуска)
 
-  update-newtag-in-helm-chart: #вносит нужный тэг в values.yaml,для деплоя новой версии приложения в кубере? И пушит тэг в гит! В гите пока старый тэг? в values.yaml
+  update-newtag-in-helm-chart: # вносит нужный тэг в values.yaml, для деплоя новой версии приложения в кубере? И пушит новый тэг в гит! В гите, в values.yaml, пока старый тэг?
     runs-on: ubuntu-latest
 
     needs: push
