--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,20 +26,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:                        # Цель: Проверить, что код компилируется и тесты проходят:
-    - name: Checkout repository   # 1. Клонирование репозитория
-      uses: actions/checkout@v4
+      - name: Checkout repository   # 1. Клонирование репозитория
+        uses: actions/checkout@v4
 
-    - name: Set up Go 1.22        # 2. Установка Go 1.22
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.22
+      - name: Set up Go 1.22        # 2. Установка Go 1.22
+        uses: actions/setup-go@v4   # Обновлено с v2 до v4 для лучшей поддержки кэша
+        with:
+          go-version: 1.22
+          cache: true               # ▼▼▼ ДОБАВЛЕНО: Автоматическое кэширование Go модулей ▼▼▼
 
-    - name: Build binary          # 3. Сборка бинарника `web-app`
-      run: go build -o web-app
+      - name: Build binary          # 3. Сборка бинарника `web-app`
+        run: go build -o web-app
 
-    - name: Test code             # 4. Запуск тестов
-      run: go test ./...
-  
+      - name: Test code             # 4. Запуск тестов
+        run: go test ./...
+
   # code-quality:
   #   runs-on: ubuntu-latest
 
@@ -51,32 +52,36 @@ jobs:
   #     uses: golangci/golangci-lint-action@v6
   #     with:
   #       version: v1.56.2
-  
+
   push:                             # Цель: push образа в DockerHub
     runs-on: ubuntu-latest
 
     needs: build                    # Зависимость от job 'build'
 
     steps:
-    - name: Checkout repository      # 1. Клонирование
-      uses: actions/checkout@v4
+      - name: Checkout repository      # 1. Клонирование
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx      # 2. Настройка Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx      # 2. Настройка Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub         # 3. Логин в DockerHub (используя secrets)
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to DockerHub         # 3. Логин в DockerHub (используя secrets)
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and Push action          # 4. Сборка и push образа в DockerHub
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{github.run_id}}  #Тег образа: webapp:${{github.run_id}} (уникальный ID запуска)
+      - name: Build and Push action          # 4. Сборка и push образа в DockerHub
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{github.run_id}}  #Тег образа: webapp:${{github.run_id}} (уникальный ID запуска)
+          # ▼▼▼ ДОБАВЛЕНО: Настройка кэширования Docker слоев через GitHub Actions Cache ▼▼▼
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # ▲▲▲ ДОБАВЛЕНО: Кэширование Docker ▲▲▲
 
 
 
@@ -94,37 +99,37 @@ jobs:
     steps:
 
 
-    - name: Wait 30 seconds for stability
-      run: |
-        echo "Waiting for Docker image to be fully available..."
-        sleep 30  # Ждем 30 секунд перед обновлением Helm 
-        
+      - name: Wait 30 seconds for stability
+        run: |
+          echo "Waiting for Docker image to be fully available..."
+          sleep 30  # Ждем 30 секунд перед обновлением Helm 
 
-    - name: Checkout repository              # 1. Клонирование с токеном и полной историей
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.TOKEN }}
-        fetch-depth: 0  # ▼▼▼ ДОБАВЬТЕ ЭТУ СТРОКУ ▼▼▼  важно для истории коммитов
 
-    - name: Update tag in Helm chart        # 2. Обновление тега в values.yaml через sed
-      run: |
-        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/web-app/values.yaml
+      - name: Checkout repository              # 1. Клонирование с токеном и полной историей
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
+          fetch-depth: 0  # ▼▼▼ ДОБАВЬТЕ ЭТУ СТРОКУ ▼▼▼  важно для истории коммитов
 
-    - name: Commit and push changes         # 3. Коммит и push изменений
-      run: |
-        git config --global user.email "loginmail2018@inbox.ru"
-        git config --global user.name "Saul-Goodman-art"
-        git add helm/web-app/values.yaml
-        git commit -m "fix: Update tag in Helm chart"
-        git push
+      - name: Update tag in Helm chart        # 2. Обновление тега в values.yaml через sed
+        run: |
+          sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/web-app/values.yaml
 
-      # --- НАЧАЛО ИЗМЕНЕНИЙ ---
-    - name: Create and push Git Tag
-      run: |
-        # Создаем легковесный тег с префиксом build- и номером запуска
-        # Например: build-41123456
-        git tag build-${{ github.run_id }}
-        
-        # Пушим тег в репозиторий
-        git push origin build-${{ github.run_id }}
+      - name: Commit and push changes         # 3. Коммит и push изменений
+        run: |
+          git config --global user.email "loginmail2018@inbox.ru"
+          git config --global user.name "Saul-Goodman-art"
+          git add helm/web-app/values.yaml
+          git commit -m "fix: Update tag in Helm chart"
+          git push
+
+        # --- НАЧАЛО ИЗМЕНЕНИЙ ---  (НУЖНО ДЛЯ ОТКАТА. Штука, чтобы в репозитории гитхаба, рядом с номером комита был тэг образа из доекр хаб. Надо открыть комит. )
+      - name: Create and push Git Tag
+        run: |
+          # Создаем легковесный тег с префиксом build- и номером запуска
+          # Например: build-41123456
+          git tag build-${{ github.run_id }}
+          
+          # Пушим тег в репозиторий
+          git push origin build-${{ github.run_id }}
     # --- КОНЕЦ ИЗМЕНЕНИЙ ---
